# one-person-billionaire

./: .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  CAPABILITIES.md  CLAUDE.md  CONTRIBUTING.md  CUSTOMIZATION.md  LICENSE  Makefile  README.md  SKILLS.md
plugins/gtm-ops/: .gitignore  CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  OPERATOR-QUICKSTART.md  README.md  ROADMAP.md  SKILLS-INDEX.md  TUTORIAL.md  docker-compose.yml  pyproject.toml
plugins/gtm-ops/.claude-plugin/: plugin.json
plugins/gtm-ops/agents/: README.md
plugins/gtm-ops/dashboards/: README.md
plugins/gtm-ops/dashboards/sheets/: README.md  gtm.abm-tier-B.gs  gtm.agent-overrides.gs  gtm.churn-watchlist.gs  gtm.cross-sell-candidates.gs  gtm.deliverability-monitor.gs  gtm.form-responses.demo-request.gs  gtm.outreach-queue.gs
plugins/gtm-ops/docs/: README.md  gtm-context.md  persona-integration.md
plugins/gtm-ops/docs/internal/: SESSION-LOG-2026-04-26.md  competitor_pitch.md
plugins/gtm-ops/evals/: promptfooconfig.yaml
plugins/gtm-ops/evals/cases/: cf-churn-saver.prompt.md  cf-din-watchdog.yaml  cf-dormant-detector.yaml  cf-drive-transcript-extractor.prompt.md  cf-forms-router.prompt.md  cf-icp-scout.yaml  cf-outreach-writer.yaml  cf-stage-mover.yaml  cf-weekly-report.yaml  churn-saver.prompt.md  cross-sell-detector.prompt.md  din-watchdog.prompt.md  din-watchdog.yaml  dormant-detector.prompt.md  (+16 more)
plugins/gtm-ops/personas/: README.md
plugins/gtm-ops/sql/: 002_schema_extensions.sql  003_schema_extensions.sql  004_persona_extensions.sql  README.md  seed_mock_data.sql
(+511 files in other folders)
